--- a/src/component/css/Newsroom_details.component.css
+++ b/src/component/css/Newsroom_details.component.css
@@ -1,3 +1,8 @@
+p {
+    margin: 0;
+    padding: 0;
+}
+
 .fh_news_det_path {
     font-size:16px;
     font-family:OpenSans-Semibold,OpenSans;
@@ -47,10 +52,4 @@
 .fh_news_det_content {
     max-width: 940px;
     margin: auto;
-    
-    text-align: left;
-    font-size:18px;
-    font-family:OpenSans;
-    color:rgba(51,51,51,1);
-    line-height:32px;
 }
