--- a/src/component/card/newscard.component.style.css
+++ b/src/component/card/newscard.component.style.css
@@ -5,6 +5,8 @@
 .ft_news_card {
     height: 404px;
     box-shadow:0px 2px 17px 0px rgba(0,0,0,0.04);
+    border-radius:3px;
+    border:1px solid rgba(227,227,227,1);
     cursor: pointer;
 }
 .ft_news_card:hover {
@@ -12,8 +14,10 @@
 }
 
 .ft_news_card_img {
-    width: 339px;
+    margin: auto;
+    width: 100%;
     height: 194px;
+    overflow: scroll;
 }
 
 .ft_news_card_body {
@@ -55,7 +59,7 @@
     max-width: 281px;
     max-height: 66px;
 
-    font-size:16px;
+    font-size:16px !important;
     font-family:OpenSans;
     color:rgba(102,102,102,1);
     line-height:22px;
