--- a/src/component/css/Recruitment_details.component.css
+++ b/src/component/css/Recruitment_details.component.css
@@ -1,4 +1,7 @@
 /* Create by Chelly P on 11/25/2019 */
+.ft-career-container-bg {
+    background-color: #FFFFFF;
+}
 
 .fh_rec_det_path {
     font-size:16px;
@@ -57,7 +60,7 @@
 
     text-align: left;
     margin: 0;
-}:q
+}
 
 .fh_rec_det_apply_content {
     font-size:16px;
@@ -79,6 +82,7 @@
 
     text-align: left;
     margin: 0;
+    padding: 0;
     padding: 0 0 0 25px;
 }
 .fh_rec_det_resp {
@@ -88,6 +92,8 @@
     line-height:27px;
 
     text-align: left;
+    margin:0;
+    padding: 0 0 20px 0;
 }
 
 .requirement {
