--- a/ft-offical-website/src/modules/home/About.css
+++ b/ft-offical-website/src/modules/home/About.css
@@ -213,8 +213,9 @@
       margin: 0;
       padding: 0;
       width: 182px;
-      height: 40px;
+      height: 43px;
       margin-top: 10px;
+      border: none;
     }
     .ft-about-best-button1 {
       margin-right: 62px;
