change function and position of slideshow in career again

--- a/ft-offical-website/src/modules/home/recruitment/component/slideshow/slideshow.component.style.css
+++ b/ft-offical-website/src/modules/home/recruitment/component/slideshow/slideshow.component.style.css
@@ -42,7 +42,7 @@
 
   .center .slick-center img {
     opacity: 1;
-    margin: 0 0 0 -25px;
+    cursor: default;
     /* transform: scale(1.08); */
   }
   .center img{
